文件管理+权限更改，文件压缩，解压上传。功能和页面
